--- a/solutions/2667.md
+++ b/solutions/2667.md
@@ -1,6 +1,6 @@
 # Đề
 
-Liệt kê ra những id có author_id trùng với viewer_id và sắp xếp tăng dần
+Viết function `createHelloWorld` để return `"Hello World"`
 
 ## Ví dụ:
 
